fixing display bug: only numbers should not wrap - headers th can wrap safely.

--- a/src/tablecreator.css
+++ b/src/tablecreator.css
@@ -87,6 +87,10 @@ tbody tr:nth-child(2n+1) {
 .method,
 .number {
 	text-align: right;
+}
+
+td.method,
+td.number {
 	white-space: nowrap;
 }
 
